# AeroACARS-AFV

./: .gitignore  .release-notes-v0.7.8.md  CHANGELOG.md  README.md
.github/: RELEASING.md
.github/workflows/: release.yml
client/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
client/src/: App.css  App.tsx  main.tsx  theme.ts  types.ts
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/crates/secrets/: Cargo.toml
client/src-tauri/crates/secrets/src/: lib.rs
client/src-tauri/crates/sim-msfs/: Cargo.toml  build.rs
client/src-tauri/crates/sim-msfs/src/: adapter.rs  lib.rs
client/src-tauri/crates/sim-msfs/src/adapter/: sys.rs  telemetry.rs
client/src-tauri/crates/sim-msfs/src/pmdg/: mod.rs  ng3.rs
client/src-tauri/crates/sim-xplane/: Cargo.toml
client/src-tauri/crates/sim-xplane/src/: adapter.rs  dataref.rs  lib.rs  premium.rs
client/src-tauri/crates/storage/: Cargo.toml
client/src-tauri/crates/storage/src/: lib.rs
client/src-tauri/src/: accident.rs  discord.rs  landing_scoring.rs  lib.rs  main.rs  runway.rs  runway_assessment.rs  sentry_init.rs  touchdown_v2.rs  xplane_plugin_install.rs
client/src-tauri/tests/: phase_fsm_replay.rs  touchdown_v2_replay.rs
client/src/components/: AboutPanel.tsx  ActiveFlightPanel.tsx  ActivityLogPanel.tsx  ApproachStabilityCard.tsx  AutoFilePirepWatcher.tsx  BidsList.tsx  BriefingView.tsx  CockpitView.tsx  Dashboard.tsx  InfoStrip.tsx  LandingPanel.tsx  LoadsheetMonitor.tsx  LoginPage.tsx  ManualFileDialog.tsx  PhaseTimeline.tsx  (+19 more)
docs/: release-checklist.md
docs/audit/: MASTER-AUDIT-REPORT.md  aeroacars-live-audit.md  pilot-client-audit.md  security-audit.md
docs/qs/: v0.7.11-qs-checklist.md  v0.7.16-fenix-beta-bugs.md
docs/release-notes/: v0.10.0.md  v0.11.0.md  v0.11.1.md  v0.11.2.md  v0.12.0.md  v0.12.10.md  v0.12.11.md  v0.12.4.md  v0.12.8.md  v0.13.0.md  v0.13.13.md  v0.13.6.md  v0.7.11.md  v0.7.13.md  v0.7.17.md  v0.7.20.md  v0.8.0.md  v0.8.4.md  v0.9.1.md
docs/spec/: autostart-log-spam.md  flight-phase-state-machine.md  ofp-refresh-during-boarding.md  ofp-refresh-simbrief-direct-v0.7.8.md  runway-diagram-v2.contract.md  sim-disconnect-auto-resume.md  touchdown-forensics-v2.md  v0.10.0-runway-utilization-score.md  v0.12.0-runway-utilization-refinement.md  v0.12.1-phase-fsm-fix-and-va-hardening.md  v0.12.2-xplane-aircraft-dataref-profiles.md  v0.12.3-landing-g-foqa-measurement.md  v0.12.4-score-consistency.md  v0.13.0-mid-session-integrity-and-resume-policy.md  v0.7.1-landing-ux-fairness.md  v0.7.8-landing-rate-explainability.md  v0.8.0-vps-navdata-runway-awareness.md  v0.9.0-conflict-audit.md  v0.9.0-delta-position-sampling.md  v0.9.0-discord-rich-presence.md  v0.9.0-e2e-golden-flights.md  v0.9.0-feature-flags-semantics.md  v0.9.0-flight-phases-expanded.md  v0.9.0-glitchtip-self-hosted.md  v0.9.0-per-bounce-detail.md  v0.9.0-roadmap.md  v0.9.0-telemetry-contract.md
scripts/: i18n-audit.mjs  release-v0.7.17.sh
xplane-plugin/: CMakeLists.txt
xplane-plugin/src/: plugin.cpp
(+24 files in other folders)
