[package]
name = "secrets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cross-platform OS keyring wrapper — secure storage for the phpVMS API key"

[dependencies]
keyring.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
