[package]
name = "sim-xplane"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "X-Plane 11/12 adapter — UDP listener paired with the bundled XPLM plugin"

[dependencies]
sim-core.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "sync", "macros"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
