[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Local persistence — SQLite-backed offline queue, flight log, settings cache"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
